Fixed button alignment, deleted unnecessary comments

--- a/css/web_speech.css
+++ b/css/web_speech.css
@@ -47,3 +47,7 @@ body {
         color: white;
         padding: 15px;
     }
+
+    .address_form #generate_hyperlapse_button {
+        margin-left: 15px;
+    }
